--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=inventario
 server.port=4000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/inventario
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/inventario}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:admin}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.data-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
 
 #Para Pruebas
