--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -7,4 +7,4 @@ FROM eclipse-temurin:latest AS service
 COPY --from=build /app/target/inventario-0.0.1-SNAPSHOT.jar /app/inventario-0.0.1-SNAPSHOT.jar
 RUN chmod +x /app/inventario-0.0.1-SNAPSHOT.jar
 EXPOSE 4000
-ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=selenium", "/app/inventario-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "/app/inventario-0.0.1-SNAPSHOT.jar"]
