--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,15 +7,5 @@ spring.datasource.password=${DB_PASSWORD:admin}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.data-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
-
-#Para Pruebas
-#spring.datasource.url = jdbc:h2:mem:testbd
-#spring.datasource.driverClassName = org.h2.Driver
-#spring.datasource.username = sa
-#spring.datasource.password = password
-#spring.jpa.show-sql = true
-
-
-
