--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,14 @@ services:
     build:
       context: backend
       dockerfile: docker/Dockerfile
+    networks:
+      - inventario-network
     ports:
       - 4000:4000
+    environment:
+      DB_URL: jdbc:mysql://inventario-database:3306/inventario
+      DB_USERNAME: root
+      DB_PASSWORD: admin
     
   inventario-frontend:
     container_name: inventario-frontend
@@ -19,5 +25,28 @@ services:
       - 3000:3000
     links:
       - inventario-backend
+    networks:
+      - inventario-network
     restart: always
     command: ["npm", "start"]
+
+  inventario-database:
+    container_name: inventario-database
+    image: mysql:latest
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: admin
+      MYSQL_DATABASE: inventario
+    ports:
+      - 3306:3306
+    networks:
+      - inventario-network
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
+
+networks:
+  inventario-network:
+    name: inventario-network
+    driver: bridge
